--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MongoDB-Express-NodeJS-RestfulAPI",
   "main": "server.js",
   "scripts": {
-    "start-dev" : "nodemon server.js",
+    "start-dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,10 +17,12 @@
   "author": "KlaraN",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cross-env": "^7.0.3",
     "dotenv-flow": "^3.2.0",
     "express": "^4.17.2",
+    "joi": "^17.6.0",
     "mongodb": "^4.3.1",
     "mongoose": "^6.2.0",
     "nodemon": "^2.0.15"
